<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LXRM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_sort">Sort</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_new_contact">New Contact</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="title_activity_view_one_contact">View contact</string>
    <string name="person_name_header">Name</string>
    <string name="person_name_hint">Enter name here …</string>
    <string name="phones_header">Phones</string>
    <string name="phone_number_hint">Enter number here …</string>
    <string name="emails_header">Emails</string>
    <string name="email_hint">Enter address here …</string>
    <string name="type">label</string>
    <string name="sort_this_list">Sort this list?</string>
    <string name="sort_this_list_how">The list will be sorted according to alphanumeric order of the first phone field of the contact. Continue?</string>
    <string name="list_sorted">List sorted</string>
    <string name="delete_this_contact">Delete this contact?</string>
    <string name="delete_this_contact_how">will be deleted, including all contact data of this contact.</string>
    <string name="saved">Saved</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="empty">No contacts to display</string>

</resources>