<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/email_type_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:hint="@string/type"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/email_address_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <ImageButton
        android:id="@+id/email_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_delete"
        android:scaleType="centerInside"
        android:src="@drawable/ic_action_discard" />

</LinearLayout>