<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/phone_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/phone_type_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:hint="@string/type"
        android:inputType="textAutoCorrect" />

    <EditText
        android:id="@+id/phone_number_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.6"
        android:hint="@string/phone_number_hint"
        android:inputType="number" />

    <ImageButton
        android:id="@+id/phone_delete"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/action_delete"
        android:scaleType="centerInside"
        android:src="@drawable/ic_action_cancel" />

</LinearLayout>