<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context=".EditOneContact" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/person_name_header" />

        <EditText
            android:id="@+id/person_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/person_name_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/phones_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/phones_header" />

        <LinearLayout
            android:id="@+id/phone_fields_layout"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/half_margin" />

        <Button
            android:id="@+id/add_phone_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_add" />

        <TextView
            android:id="@+id/emails_header"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/half_margin"
            android:text="@string/emails_header" />

        <LinearLayout
            android:id="@+id/email_fields_layout"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/half_margin" />

        <Button
            android:id="@+id/add_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_add" />
    </LinearLayout>

</ScrollView>